# distributed-vectordb

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
vector_db/: .gitignore
vector_db/src/: build.rs
