[package]
name = "vector_db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode-next = "2.0.4"
ordered-float = "5.1.0"
prost = "0.14.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"

[build-dependencies]
tonic-build = "0.14.2"
